--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -320,7 +320,7 @@
         <!-- Initialization related code -->
         <script src="static/js/init.js"></script>
         <!-- define the functions communicating with background service for notification -->
-       <!-- <script src="static/js/ntfservice.js"></script>
+        <script src="static/js/ntfservice.js"></script>
         <!-- Configure the geographical area where the app is to be used in -->
         <script src="static/js/config.js"></script>
         <script src="static/js/local_config.js"></script>
